@@ -1,0 +1,11 @@
+rup_mag,dist_rjb,site_vs30,result_type,damping,pga,0.3,0.2
+8,20,800,MEAN,5,0.4328,0.9522,1.0821
+7.7,20,800,MEAN,5,0.4328,0.9522,1.0821
+7,20,800,MEAN,5,0.3056,0.6722,0.7639
+6,20,800,MEAN,5,0.1253,0.2758,0.3133
+5,20,800,MEAN,5,0.0514,0.1131,0.1285
+8,40,800,MEAN,5,0.2143,0.4715,0.5358
+7.7,40,800,MEAN,5,0.2143,0.4715,0.5358
+7,40,800,MEAN,5,0.1513,0.3329,0.3783
+6,40,800,MEAN,5,0.0621,0.1366,0.1552
+5,40,800,MEAN,5,0.0255,0.0561,0.0638
