@@ -1,0 +1,11 @@
+rup_mag,dist_rjb,site_vs30,result_type,damping,pga
+8.,20.,800.,TOTAL_STDDEV,5.,0.54571267
+7.7,20.,800.,TOTAL_STDDEV,5.,0.54571267
+7.,20.,800.,TOTAL_STDDEV,5.,0.54571267
+6.,20.,800.,TOTAL_STDDEV,5.,0.54571267
+5.,20.,800.,TOTAL_STDDEV,5.,0.54571267
+8.,40.,800.,TOTAL_STDDEV,5.,0.54571267
+7.7,40.,800.,TOTAL_STDDEV,5.,0.54571267
+7.,40.,800.,TOTAL_STDDEV,5.,0.54571267
+6.,40.,800.,TOTAL_STDDEV,5.,0.54571267
+5.,40.,800.,TOTAL_STDDEV,5.,0.54571267
